HIL/src/objects/Rep_Code_User__c.object
<CustomObject>
    <fields>
        <fullName>RepCode_txt__c</fullName>
        <formula>Rep_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RepCode-txt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep Code</label>
        <referenceTo>Rep_Code__c</referenceTo>
        <relationshipLabel>Rep Code Users</relationshipLabel>
        <relationshipName>Rep_Code_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <formula>User__r.FirstName  &amp; &quot; &quot; &amp; User__r.LastName</formula>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rep_Code_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rep Code User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Rep_Code__c</columns>
        <columns>User__c</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rep Code User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rep Code Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>